# pr2_kinodynamics

./: .gitignore  README.md  stack.xml
pr2_dynamics/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_dynamics/include/: dynamics_model.h
pr2_dynamics/src/: demo_forward_dynamics.cpp  dynamics_model.cpp
pr2_trajectory/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_trajectory/example_plans/: plan.txt  point.txt
pr2_trajectory/include/: common_includes.h
pr2_trajectory/include/control/: gripper_client.h  torso_client.h
pr2_trajectory/include/test/: dynamic_trajectory.hpp
pr2_trajectory/include/trajectory/: ArmTrajectoryHandler.hpp
pr2_trajectory/include/utils/: eigen_utils.h  trajectory_utils.hpp  utils.hpp
pr2_trajectory/logging/: Wed Dec 11 11:24:46 2013_eff.txt  Wed Dec 11 11:24:46 2013_pos.txt  Wed Dec 11 11:24:46 2013_vel.txt
pr2_trajectory/src/control/: gripper_client.cpp  torso_client.cpp
pr2_trajectory/src/test/: demo_forward_dynamics.cpp  dynamic_trajectory.cpp  inverse_dynamics_computation_cost_test.cpp
pr2_trajectory/src/trajectory/: ArmTrajectoryHandler.cpp  run_trajectory.cpp
pr2_trajectory/src/utils/: eigen_utils.cpp  trajectory_utils.cpp  utils.cpp
